--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,7 @@
 baseURL = 'https://mark-z-r.github.io/'
 languageCode = 'en-us'
 title = "Mark's Website"
+disableKinds = ['rss','sitemap']
+[minify]
+ minifyOutput = true
 
