Added CSS and a 404 page

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,5 +3,5 @@ languageCode = 'en-us'
 title = "Mark's Website"
 disableKinds = ['rss','sitemap']
 [minify]
- minifyOutput = true
+ minifyOutput = false
 
