--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,9 @@ baseURL = 'https://mark-z-r.github.io/'
 languageCode = 'en-us'
 title = "Mark's Website"
 disableKinds = ['rss','sitemap']
+[taxonomies]
+  tags = 'tags'
 [minify]
  minifyOutput = false
-
+[markup.goldmark.renderer]
+  unsafe = true
